tests/artifacts/gateway-not-programmed.out

Gateway/eg -n default, created 1m ago, gen:1
  Current: Resource is current
  Class: eg
  Accepted:True Accepted, The Gateway has been scheduled by Envoy Gateway for 1m
  Programmed:False AddressNotAssigned, No addresses have been assigned to the Gateway for 1m
  Listeners:
    http: port=80/HTTP, namespaces=Same, accepts=HTTPRoute/GRPCRoute, routes=1
      Accepted:True Accepted, Listener has been successfully translated for 1m
      Programmed:True Programmed, Sending translated listener configuration to the data plane for 1m
      ResolvedRefs:True ResolvedRefs, Listener references have been resolved for 1m
